# ChangeLog for dev-perl/DateTime-Locale
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.41 2007/05/05 17:41:21 dertobi123 Exp $

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  DateTime-Locale-0.34.ebuild:
  ppc stable

  15 Apr 2007; Markus Rothe <corsair@gentoo.org>
  DateTime-Locale-0.32.ebuild:
  Stable on ppc64

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.34.ebuild:
  sparc stable

  08 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.34.ebuild:
  Marking amd64 stable

*DateTime-Locale-0.34 (09 Mar 2007)

  09 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-Locale-0.34.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> DateTime-Locale-0.32.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  DateTime-Locale-0.32.ebuild:
  Stable on Alpha + IA64.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.22.ebuild:
  Ebuild maintenance

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.32.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.22.ebuild, DateTime-Locale-0.32.ebuild:
  Marking amd64 stable

*DateTime-Locale-0.33 (07 Jan 2007)

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +DateTime-Locale-0.33.ebuild:
  Version bump

*DateTime-Locale-0.32 (22 Nov 2006)

  22 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +DateTime-Locale-0.32.ebuild:
  Version bump

  21 Nov 2006; Joseph Jezak <josejx@gentoo.org> DateTime-Locale-0.22.ebuild:
  Marked ppc stable.

  19 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  DateTime-Locale-0.31.01.ebuild:
  Add ~x86-fbsd keyword.

*DateTime-Locale-0.31.01 (28 Oct 2006)

  28 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  +DateTime-Locale-0.31.01.ebuild:
  Version bump
