@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/Attic/DateTime-Locale-0.34.ebuild,v 1.4 2007/05/05 17:41:21 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/Attic/DateTime-Locale-0.34.ebuild,v 1.5 2007/07/05 16:24:52 armin76 Exp $
 
 inherit versionator perl-module
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://cpan/authors/id/D/DR/DROLSKY/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~ia64 ppc ~ppc64 sparc ~x86"
+KEYWORDS="alpha amd64 ia64 ppc ~ppc64 sparc x86"
 IUSE=""
 SRC_TEST="do"
 
