@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/Attic/DateTime-TimeZone-0.66.02.ebuild,v 1.1 2007/06/11 18:43:31 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/Attic/DateTime-TimeZone-0.66.02.ebuild,v 1.2 2007/07/05 16:26:02 armin76 Exp $
 
 inherit versionator perl-module
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://cpan/authors/id/D/DR/DROLSKY/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="alpha ~amd64 ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd"
 IUSE=""
 SRC_TEST="do"
 
