@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/Attic/DateTime-0.37.ebuild,v 1.2 2007/06/21 14:58:40 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/Attic/DateTime-0.37.ebuild,v 1.3 2007/07/05 16:28:12 armin76 Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://cpan/authors/id/D/DR/DROLSKY/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 sparc ~x86 ~x86-fbsd"
+KEYWORDS="alpha ~amd64 ia64 ~ppc ~ppc64 sparc x86 ~x86-fbsd"
 IUSE=""
 
 SRC_TEST="do"
