@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.73 2007/06/21 15:00:23 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.74 2007/07/05 16:26:02 armin76 Exp $
+
+  05 Jul 2007; Raúl Porcel <armin76@gentoo.org>
+  DateTime-TimeZone-0.66.02.ebuild:
+  alpha/ia64/x86 stable
 
   21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
   DateTime-TimeZone-0.63.ebuild, DateTime-TimeZone-0.64.ebuild,
