@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/DateTime
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.48 2007/06/21 14:58:40 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.49 2007/07/05 16:28:12 armin76 Exp $
+
+  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> DateTime-0.37.ebuild:
+  alpha/ia64/x86 stable
 
   21 Jun 2007; Michael Cummings <mcummings@gentoo.org> DateTime-0.37.ebuild:
   Marking sparc stable
