@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime-Locale
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.41 2007/05/05 17:41:21 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.42 2007/07/05 16:24:52 armin76 Exp $
+
+  05 Jul 2007; Raúl Porcel <armin76@gentoo.org>
+  DateTime-Locale-0.34.ebuild:
+  alpha/ia64/x86 stable
 
   05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   DateTime-Locale-0.34.ebuild:
